apps/haists-website/virtual-service.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: haists-website
  namespace: haists-website
spec:
  hosts:
    - www.${INTERNAL_DOMAIN}
    - www.${DOMAIN}
  gateways:
    - istio-ingress/sentinel-gateway
  http:
    - route:
        - destination:
            host: haists-website.haists-website.svc.cluster.local
            port:
              number: 8080
